--- a/configs/inference.yaml
+++ b/configs/inference.yaml
@@ -8,8 +8,8 @@
 
 "inference":
   "checkpoint_path": "stats/checkpoint.tar"
-  "image_size": !!python/tuple [320, 240]
+  "image_size": [1280, 720]
   "cuda_id": 0
   "depth_min": 0.3
-  "depth_max": 1.0
+  "depth_max": 5.0
   "depth_norm": 1.0
